# elevare-platform

./: .gitignore  Makefile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  Makefile  pyproject.toml  requirements.txt  test_out.txt
backend/alembic/: env.py
backend/alembic/versions/: 0850b6176e71_add_work_experience_education_.py  091df3dcdcb3_add_immutability_trigger_to_audit_log.py  1022ea7b7a88_add_cv_parsing_costs.py  1cd84b3a7473_added_match_score_and_score_computed_at_.py  2a4fe6012739_structured_candidate_models_add_cv_and_.py  33142ad61fa0_add_moderation_status_to_jobs.py  4a01460264af_add_email_verified_at_to_users.py  4ee45042089b_added_cv_sharing_consent_to_candidates_.py  505bbe809ca9_create_jobs_table.py  5b1ee5fdfe81_add_contact_submissions_table.py  676964ce415d_add_testimonials_table.py  67aecdac4d27_add_linkedin_url_to_candidate_profile.py  69c46e0f2544_add_employer_profiles_table.py  727c9e286762_add_work_location_to_job_model.py  78ab2e6563f1_added_job_access_tokens_and_talent_pool_.py  797b677a8e6a_add_application_deadline_to_jobs.py  7af353621b03_add_embedding_columns_to_candidate_.py  7cf768a25778_add_server_defaults_for_role_and_.py  8494d59c61f2_created_applications_table.py  94cb6946e696_add_cv_parse_status_and_submission_id_.py  (+26 more)
backend/app/: main.py
backend/core/: tasks.py
backend/scripts/: backup_postgres.sh  dedup_talent_pool.py  regenerate_embeddings.py  seed_demo_applicants.py  seed_jobs.py  test_r2_connection.py  test_reply_to.py
backend/tests/: conftest.py  test_health.py
(+326 files in other folders)
