[project]
name = "elevare-backend"
version = "0.1.0"
description = "Elevare Human Solutions — Backend API"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]

ignore = [
    "E501",  # line too long — ruff format handles this
    "B008",  # FastAPI Depends() false positive
]

per-file-ignores = { "tests/*" = ["S101"] }  # allow assert in tests

[tool.isort]
profile = "black"
known_first_party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
